# django-tutorial-samples-qboot-winter

./: .gitignore
session1/: custom_server.py  design_patterns.py  json_serializer.py
session2/sample_project/base/: models.py
session2/sample_project/order/: models.py
session2/sample_project/sample_project/: settings.py  urls.py
session2/view_samples/: manage.py
session2/view_samples/posts/: admin.py  models.py  urls.py  views.py
session2/view_samples/users/: urls.py  views.py
session2/view_samples/view_samples/: asgi.py  settings.py  urls.py  wsgi.py
session3/query_samples/: manage.py
session3/query_samples/football/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
session3/query_samples/posts/: admin.py  forms.py  models.py  views.py
session3/query_samples/query_samples/: asgi.py  settings.py  urls.py  wsgi.py
session3/query_samples/templates/: base.html
session4/auth_samples/: cookies.txt  manage.py  mixins.py
session4/auth_samples/auth_samples/: asgi.py  middlewares.py  settings.py  urls.py  wsgi.py
session4/auth_samples/authentication/: admin.py  backends.py  models.py  urls.py  views.py
session5/online_shop/: .gitignore
session6/drf_samples/: manage.py  patterns.py
session7/samples/: async.py  manage.py  thread.py
session8/: nginx.conf
session8/package_sample/: LICENSE  MANIFEST.in  README.md  setup.cfg
session8/package_sample/post/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
session8/package_sample/post/migrations/: 0001_initial.py
session8/pagination_samples/: gunicorn.conf.py  manage.py
(+114 files in other folders)
