[check-manifest]
ignore =
    .git*
    .vscode/*
    manage.py

[metadata]
name = post_package
version = v1.0.8
description = Sample post package to showcase packaging in Django
long_description = file: README.md
long_description_content_type = text/markdown
author = Sajad Rezvani
author_email = s.rezvani@nilva.ir
url = https://github.com/sajadgilga/django-tutorial-samples-qboot-winter
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: 4.2.9
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
install_requires =
    django>=4.0.0
    envparse==0.2.0
python_requires = >=3.5

[options.entry_points]
console_scripts =
    django-project=django.core.management:execute_from_command_line

[options.extras_require]
dev =
    check-manifest==0.37
    django-debug-toolbar==1.11
    ipython==7.4.0
